Buscando o CFOP pelo NCM.

--- a/l10n_br_account_product/views/account_product_fiscal_classification_view.xml
+++ b/l10n_br_account_product/views/account_product_fiscal_classification_view.xml
@@ -143,6 +143,9 @@
                     <field name="tax_code_id" domain="[('domain', '=', tax_domain)]" select="1"/>
                     <field name="tax_ipi_guideline_id"/>
                     <field name="tax_icms_relief_id"/>
+                    <field name="cfop_estado_id"/>
+                    <field name="cfop_outros_id"/>
+                    <field name="cfop_exterior_id"/>                    
                 </tree>
             </field>
         </record>
@@ -157,6 +160,7 @@
                     <field name="tax_code_id" domain="[('domain', '=', tax_domain)]" select="1"/>
                     <field name="tax_ipi_guideline_id"/>
                     <field name="tax_icms_relief_id"/>
+                    <field name="cfop_entrada_id"/>
                 </form>
             </field>
         </record>
@@ -171,6 +175,7 @@
                     <field name="tax_code_id" domain="[('domain', '=', tax_domain)]" select="1"/>
                     <field name="tax_ipi_guideline_id"/>
                     <field name="tax_icms_relief_id"/>
+                    <field name="cfop_entrada_id"/>
                 </tree>
             </field>
         </record>
